--- a/100003-DataFrame.ipynb
+++ b/100003-DataFrame.ipynb
@@ -3671,6 +3671,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transposing转置"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "第[0-5)行的转置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>0.451154</td>\n",
+       "      <td>1.976597</td>\n",
+       "      <td>1.150852</td>\n",
+       "      <td>-1.411448</td>\n",
+       "      <td>1.412643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>3.013397</td>\n",
+       "      <td>-1.292531</td>\n",
+       "      <td>0.307340</td>\n",
+       "      <td>-2.370126</td>\n",
+       "      <td>1.121950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>-0.590663</td>\n",
+       "      <td>-0.922350</td>\n",
+       "      <td>0.843002</td>\n",
+       "      <td>0.131694</td>\n",
+       "      <td>-0.492626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>-1.782546</td>\n",
+       "      <td>-0.460773</td>\n",
+       "      <td>1.026534</td>\n",
+       "      <td>-0.359684</td>\n",
+       "      <td>-1.245136</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4\n",
+       "A  0.451154  1.976597  1.150852 -1.411448  1.412643\n",
+       "B  3.013397 -1.292531  0.307340 -2.370126  1.121950\n",
+       "C -0.590663 -0.922350  0.843002  0.131694 -0.492626\n",
+       "D -1.782546 -0.460773  1.026534 -0.359684 -1.245136"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[:5].T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
