DataFrame与Numpy的转换操作

--- a/100003-DataFrame.ipynb
+++ b/100003-DataFrame.ipynb
@@ -3772,6 +3772,397 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame interoperability with NumPy functions  \n",
+    "## DataFrame与Numpy的转换操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.570124</td>\n",
+       "      <td>20.356431</td>\n",
+       "      <td>0.553960</td>\n",
+       "      <td>0.168209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.218139</td>\n",
+       "      <td>0.274575</td>\n",
+       "      <td>0.397583</td>\n",
+       "      <td>0.630796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.160886</td>\n",
+       "      <td>1.359803</td>\n",
+       "      <td>2.323330</td>\n",
+       "      <td>2.791375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.243790</td>\n",
+       "      <td>0.093469</td>\n",
+       "      <td>1.140760</td>\n",
+       "      <td>0.697897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.106794</td>\n",
+       "      <td>3.070835</td>\n",
+       "      <td>0.611020</td>\n",
+       "      <td>0.287902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.712246</td>\n",
+       "      <td>1.035236</td>\n",
+       "      <td>2.766889</td>\n",
+       "      <td>2.954034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.844785</td>\n",
+       "      <td>7.503022</td>\n",
+       "      <td>0.221355</td>\n",
+       "      <td>0.303475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.456677</td>\n",
+       "      <td>2.959786</td>\n",
+       "      <td>0.371902</td>\n",
+       "      <td>3.190093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.976726</td>\n",
+       "      <td>0.491739</td>\n",
+       "      <td>1.380009</td>\n",
+       "      <td>0.354171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1.518447</td>\n",
+       "      <td>0.832781</td>\n",
+       "      <td>0.433949</td>\n",
+       "      <td>0.593810</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A          B         C         D\n",
+       "0  1.570124  20.356431  0.553960  0.168209\n",
+       "1  7.218139   0.274575  0.397583  0.630796\n",
+       "2  3.160886   1.359803  2.323330  2.791375\n",
+       "3  0.243790   0.093469  1.140760  0.697897\n",
+       "4  4.106794   3.070835  0.611020  0.287902\n",
+       "5  3.712246   1.035236  2.766889  2.954034\n",
+       "6  0.844785   7.503022  0.221355  0.303475\n",
+       "7  1.456677   2.959786  0.371902  3.190093\n",
+       "8  0.976726   0.491739  1.380009  0.354171\n",
+       "9  1.518447   0.832781  0.433949  0.593810"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.45115437,  3.0133969 , -0.59066348, -1.78254561],\n",
+       "       [ 1.9765972 , -1.2925307 , -0.9223504 , -0.46077251],\n",
+       "       [ 1.15085232,  0.30733998,  0.84300162,  1.02653422],\n",
+       "       [-1.4114478 , -2.37012637,  0.13169449, -0.35968431],\n",
+       "       [ 1.4126427 ,  1.12194959, -0.49262553, -1.24513618],\n",
+       "       [ 1.31163709,  0.03462985,  1.01772371,  1.08317175],\n",
+       "       [-0.16867334,  2.01530594, -1.50798538, -1.19245653],\n",
+       "       [ 0.37615808,  1.08511708, -0.98912396,  1.16005011],\n",
+       "       [-0.02354894, -0.70980725,  0.32209011, -1.03797519],\n",
+       "       [ 0.41768806, -0.18298516, -0.83482891, -0.52119531]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.asarray(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series([1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2.718282\n",
+       "1     7.389056\n",
+       "2    20.085537\n",
+       "3    54.598150\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(ser)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser1 = pd.Series([1,2,3], index=[\"a\",\"b\",\"c\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser2 = pd.Series([1,3,5], index=[\"b\",\"a\",\"c\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1\n",
+       "b    2\n",
+       "c    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b    1\n",
+       "a    3\n",
+       "c    5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1\n",
+       "b    0\n",
+       "c    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.remainder(ser1,ser2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser3 = pd.Series([2,4,6], index=[\"b\",\"c\",\"d\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b    2\n",
+       "c    4\n",
+       "d    6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "取两个索引的并集，用缺失的值填充不重叠的值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    NaN\n",
+       "b    0.0\n",
+       "c    3.0\n",
+       "d    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.remainder(ser1,ser3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser4 = pd.Series([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = pd.Index([4,5,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4\n",
+       "1    5\n",
+       "2    6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.maximum(ser4, idx)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
