对date_range函数参数进行细调

--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -36,7 +36,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2000-01-01', '2000-01-02', '2000-01-03', '2000-01-04',\n",
+       "               '2000-01-05', '2000-01-06', '2000-01-07', '2000-01-08'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index2 = pd.date_range(\"1/1/2000\", periods=8,freq='M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2000-01-31', '2000-02-29', '2000-03-31', '2000-04-30',\n",
+       "               '2000-05-31', '2000-06-30', '2000-07-31', '2000-08-31'],\n",
+       "              dtype='datetime64[ns]', freq='M')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +98,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a   -0.605918\n",
+       "b    1.006256\n",
+       "c    0.397268\n",
+       "d    1.754452\n",
+       "e    0.983428\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +132,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>-0.547248</td>\n",
+       "      <td>0.818705</td>\n",
+       "      <td>1.126855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>-0.599163</td>\n",
+       "      <td>0.711461</td>\n",
+       "      <td>-1.343652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>2.149195</td>\n",
+       "      <td>-0.042165</td>\n",
+       "      <td>-0.264551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>0.371232</td>\n",
+       "      <td>0.097317</td>\n",
+       "      <td>-1.443935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>0.303712</td>\n",
+       "      <td>-1.043812</td>\n",
+       "      <td>-1.241518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>-1.014341</td>\n",
+       "      <td>2.431736</td>\n",
+       "      <td>0.482275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>0.012789</td>\n",
+       "      <td>-1.311591</td>\n",
+       "      <td>-0.306733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-08</th>\n",
+       "      <td>1.236201</td>\n",
+       "      <td>-0.491117</td>\n",
+       "      <td>-2.407042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B         C\n",
+       "2000-01-01 -0.547248  0.818705  1.126855\n",
+       "2000-01-02 -0.599163  0.711461 -1.343652\n",
+       "2000-01-03  2.149195 -0.042165 -0.264551\n",
+       "2000-01-04  0.371232  0.097317 -1.443935\n",
+       "2000-01-05  0.303712 -1.043812 -1.241518\n",
+       "2000-01-06 -1.014341  2.431736  0.482275\n",
+       "2000-01-07  0.012789 -1.311591 -0.306733\n",
+       "2000-01-08  1.236201 -0.491117 -2.407042"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,21 +246,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0   -0.075322\n",
-       "1    0.282482\n",
-       "2   -0.739802\n",
-       "3   -0.354981\n",
-       "4   -0.728621\n",
+       "0    1.539328\n",
+       "1   -0.336999\n",
+       "2   -0.641272\n",
+       "3    0.502665\n",
+       "4   -1.359357\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
