--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -271,6 +271,275 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "997   -0.529355\n",
+       "998    0.717692\n",
+       "999    0.917961\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "long_series.tail(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Attributes and underlying data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>-0.547248</td>\n",
+       "      <td>0.818705</td>\n",
+       "      <td>1.126855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>-0.599163</td>\n",
+       "      <td>0.711461</td>\n",
+       "      <td>-1.343652</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B         C\n",
+       "2000-01-01 -0.547248  0.818705  1.126855\n",
+       "2000-01-02 -0.599163  0.711461 -1.343652"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2000-01-01', '2000-01-02', '2000-01-03', '2000-01-04',\n",
+       "               '2000-01-05', '2000-01-06', '2000-01-07', '2000-01-08'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['a', 'b', 'c'], dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = [x.lower() for x in df.columns ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['a', 'b', 'c'], dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>-0.547248</td>\n",
+       "      <td>0.818705</td>\n",
+       "      <td>1.126855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>-0.599163</td>\n",
+       "      <td>0.711461</td>\n",
+       "      <td>-1.343652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>2.149195</td>\n",
+       "      <td>-0.042165</td>\n",
+       "      <td>-0.264551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>0.371232</td>\n",
+       "      <td>0.097317</td>\n",
+       "      <td>-1.443935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>0.303712</td>\n",
+       "      <td>-1.043812</td>\n",
+       "      <td>-1.241518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>-1.014341</td>\n",
+       "      <td>2.431736</td>\n",
+       "      <td>0.482275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>0.012789</td>\n",
+       "      <td>-1.311591</td>\n",
+       "      <td>-0.306733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-08</th>\n",
+       "      <td>1.236201</td>\n",
+       "      <td>-0.491117</td>\n",
+       "      <td>-2.407042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   a         b         c\n",
+       "2000-01-01 -0.547248  0.818705  1.126855\n",
+       "2000-01-02 -0.599163  0.711461 -1.343652\n",
+       "2000-01-03  2.149195 -0.042165 -0.264551\n",
+       "2000-01-04  0.371232  0.097317 -1.443935\n",
+       "2000-01-05  0.303712 -1.043812 -1.241518\n",
+       "2000-01-06 -1.014341  2.431736  0.482275\n",
+       "2000-01-07  0.012789 -1.311591 -0.306733\n",
+       "2000-01-08  1.236201 -0.491117 -2.407042"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
