--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "              dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "              dtype='datetime64[ns]', freq='M')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,21 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a   -0.605918\n",
-       "b    1.006256\n",
-       "c    0.397268\n",
-       "d    1.754452\n",
-       "e    0.983428\n",
+       "a   -1.405603\n",
+       "b   -0.897936\n",
+       "c   -0.660885\n",
+       "d    1.755417\n",
+       "e    0.148828\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -164,51 +164,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>-0.547248</td>\n",
-       "      <td>0.818705</td>\n",
-       "      <td>1.126855</td>\n",
+       "      <td>0.459253</td>\n",
+       "      <td>-0.525373</td>\n",
+       "      <td>1.124116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>-0.599163</td>\n",
-       "      <td>0.711461</td>\n",
-       "      <td>-1.343652</td>\n",
+       "      <td>0.328501</td>\n",
+       "      <td>0.742063</td>\n",
+       "      <td>-1.680669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>2.149195</td>\n",
-       "      <td>-0.042165</td>\n",
-       "      <td>-0.264551</td>\n",
+       "      <td>0.758567</td>\n",
+       "      <td>-1.359896</td>\n",
+       "      <td>0.048292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>0.371232</td>\n",
-       "      <td>0.097317</td>\n",
-       "      <td>-1.443935</td>\n",
+       "      <td>1.553641</td>\n",
+       "      <td>0.378608</td>\n",
+       "      <td>-0.121617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>0.303712</td>\n",
-       "      <td>-1.043812</td>\n",
-       "      <td>-1.241518</td>\n",
+       "      <td>0.207323</td>\n",
+       "      <td>1.261774</td>\n",
+       "      <td>-0.545756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>-1.014341</td>\n",
-       "      <td>2.431736</td>\n",
-       "      <td>0.482275</td>\n",
+       "      <td>1.352899</td>\n",
+       "      <td>0.672543</td>\n",
+       "      <td>-0.211561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>0.012789</td>\n",
-       "      <td>-1.311591</td>\n",
-       "      <td>-0.306733</td>\n",
+       "      <td>0.395342</td>\n",
+       "      <td>0.300007</td>\n",
+       "      <td>1.157092</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-08</th>\n",
-       "      <td>1.236201</td>\n",
-       "      <td>-0.491117</td>\n",
-       "      <td>-2.407042</td>\n",
+       "      <td>0.781457</td>\n",
+       "      <td>-1.404341</td>\n",
+       "      <td>0.141357</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -216,17 +216,17 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01 -0.547248  0.818705  1.126855\n",
-       "2000-01-02 -0.599163  0.711461 -1.343652\n",
-       "2000-01-03  2.149195 -0.042165 -0.264551\n",
-       "2000-01-04  0.371232  0.097317 -1.443935\n",
-       "2000-01-05  0.303712 -1.043812 -1.241518\n",
-       "2000-01-06 -1.014341  2.431736  0.482275\n",
-       "2000-01-07  0.012789 -1.311591 -0.306733\n",
-       "2000-01-08  1.236201 -0.491117 -2.407042"
+       "2000-01-01  0.459253 -0.525373  1.124116\n",
+       "2000-01-02  0.328501  0.742063 -1.680669\n",
+       "2000-01-03  0.758567 -1.359896  0.048292\n",
+       "2000-01-04  1.553641  0.378608 -0.121617\n",
+       "2000-01-05  0.207323  1.261774 -0.545756\n",
+       "2000-01-06  1.352899  0.672543 -0.211561\n",
+       "2000-01-07  0.395342  0.300007  1.157092\n",
+       "2000-01-08  0.781457 -1.404341  0.141357"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,21 +246,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    1.539328\n",
-       "1   -0.336999\n",
-       "2   -0.641272\n",
-       "3    0.502665\n",
-       "4   -1.359357\n",
+       "0    0.428035\n",
+       "1    0.415150\n",
+       "2    0.345762\n",
+       "3    0.207961\n",
+       "4   -1.074859\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,19 +271,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "997   -0.529355\n",
-       "998    0.717692\n",
-       "999    0.917961\n",
+       "997   -1.570035\n",
+       "998   -0.265669\n",
+       "999   -2.320876\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -333,15 +333,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>-0.547248</td>\n",
-       "      <td>0.818705</td>\n",
-       "      <td>1.126855</td>\n",
+       "      <td>0.459253</td>\n",
+       "      <td>-0.525373</td>\n",
+       "      <td>1.124116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>-0.599163</td>\n",
-       "      <td>0.711461</td>\n",
-       "      <td>-1.343652</td>\n",
+       "      <td>0.328501</td>\n",
+       "      <td>0.742063</td>\n",
+       "      <td>-1.680669</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -349,11 +349,11 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01 -0.547248  0.818705  1.126855\n",
-       "2000-01-02 -0.599163  0.711461 -1.343652"
+       "2000-01-01  0.459253 -0.525373  1.124116\n",
+       "2000-01-02  0.328501  0.742063 -1.680669"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "              dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,16 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['a', 'b', 'c'], dtype='object')"
+       "Index(['A', 'B', 'C'], dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in df.columns:\n",
+    "    print(x.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +444,7 @@
        "Index(['a', 'b', 'c'], dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = [x.upper() for x in df.columns ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -459,83 +488,269 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "      <th>c</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>-0.547248</td>\n",
-       "      <td>0.818705</td>\n",
-       "      <td>1.126855</td>\n",
+       "      <td>0.459253</td>\n",
+       "      <td>-0.525373</td>\n",
+       "      <td>1.124116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>-0.599163</td>\n",
-       "      <td>0.711461</td>\n",
-       "      <td>-1.343652</td>\n",
+       "      <td>0.328501</td>\n",
+       "      <td>0.742063</td>\n",
+       "      <td>-1.680669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>2.149195</td>\n",
-       "      <td>-0.042165</td>\n",
-       "      <td>-0.264551</td>\n",
+       "      <td>0.758567</td>\n",
+       "      <td>-1.359896</td>\n",
+       "      <td>0.048292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>0.371232</td>\n",
-       "      <td>0.097317</td>\n",
-       "      <td>-1.443935</td>\n",
+       "      <td>1.553641</td>\n",
+       "      <td>0.378608</td>\n",
+       "      <td>-0.121617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>0.303712</td>\n",
-       "      <td>-1.043812</td>\n",
-       "      <td>-1.241518</td>\n",
+       "      <td>0.207323</td>\n",
+       "      <td>1.261774</td>\n",
+       "      <td>-0.545756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>-1.014341</td>\n",
-       "      <td>2.431736</td>\n",
-       "      <td>0.482275</td>\n",
+       "      <td>1.352899</td>\n",
+       "      <td>0.672543</td>\n",
+       "      <td>-0.211561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>0.012789</td>\n",
-       "      <td>-1.311591</td>\n",
-       "      <td>-0.306733</td>\n",
+       "      <td>0.395342</td>\n",
+       "      <td>0.300007</td>\n",
+       "      <td>1.157092</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-08</th>\n",
-       "      <td>1.236201</td>\n",
-       "      <td>-0.491117</td>\n",
-       "      <td>-2.407042</td>\n",
+       "      <td>0.781457</td>\n",
+       "      <td>-1.404341</td>\n",
+       "      <td>0.141357</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   a         b         c\n",
-       "2000-01-01 -0.547248  0.818705  1.126855\n",
-       "2000-01-02 -0.599163  0.711461 -1.343652\n",
-       "2000-01-03  2.149195 -0.042165 -0.264551\n",
-       "2000-01-04  0.371232  0.097317 -1.443935\n",
-       "2000-01-05  0.303712 -1.043812 -1.241518\n",
-       "2000-01-06 -1.014341  2.431736  0.482275\n",
-       "2000-01-07  0.012789 -1.311591 -0.306733\n",
-       "2000-01-08  1.236201 -0.491117 -2.407042"
+       "                   A         B         C\n",
+       "2000-01-01  0.459253 -0.525373  1.124116\n",
+       "2000-01-02  0.328501  0.742063 -1.680669\n",
+       "2000-01-03  0.758567 -1.359896  0.048292\n",
+       "2000-01-04  1.553641  0.378608 -0.121617\n",
+       "2000-01-05  0.207323  1.261774 -0.545756\n",
+       "2000-01-06  1.352899  0.672543 -0.211561\n",
+       "2000-01-07  0.395342  0.300007  1.157092\n",
+       "2000-01-08  0.781457 -1.404341  0.141357"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PandasArray>\n",
+       "[-1.4056026131406136, -0.8979355707620631, -0.6608851917837442,\n",
+       "  1.7554166511625455,  0.1488278821131381]\n",
+       "Length: 5, dtype: float64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PandasArray>\n",
+       "['a', 'b', 'c', 'd', 'e']\n",
+       "Length: 5, dtype: object"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.index.array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.40560261, -0.89793557, -0.66088519,  1.75541665,  0.14882788])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.40560261, -0.89793557, -0.66088519,  1.75541665,  0.14882788])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.asarray(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series(pd.date_range(\"2000\", periods=2, tz=\"CET\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([Timestamp('2000-01-01 00:00:00+0100', tz='CET', freq='D'),\n",
+       "       Timestamp('2000-01-02 00:00:00+0100', tz='CET', freq='D')],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.to_numpy(dtype=object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2000-01-01 00:00:00+01:00\n",
+       "1   2000-01-02 00:00:00+01:00\n",
+       "dtype: datetime64[ns, CET]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1999-12-31T23:00:00.000000000', '2000-01-01T23:00:00.000000000'],\n",
+       "      dtype='datetime64[ns]')"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.to_numpy(dtype=\"datetime64[ns]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.4592529 , -0.52537306,  1.12411646],\n",
+       "       [ 0.32850105,  0.74206298, -1.68066942],\n",
+       "       [ 0.75856694, -1.35989607,  0.04829201],\n",
+       "       [ 1.55364104,  0.37860846, -0.12161711],\n",
+       "       [ 0.20732289,  1.26177426, -0.54575618],\n",
+       "       [ 1.35289881,  0.67254321, -0.21156091],\n",
+       "       [ 0.39534179,  0.30000683,  1.15709185],\n",
+       "       [ 0.78145733, -1.40434141,  0.14135733]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_numpy()"
    ]
   },
   {
